# CSP10-SPH

./: .gitignore  CMakeLists.txt  CMakeLists_andres.txt  ChainingMesh.hpp  Manager.cpp  Manager.h  Manager_implementation.cpp  Particle_SPH.h  README.md  SPHParticle_radovan.hpp  SPH_Manager.cpp  SPH_Particle.hpp
KH_instability/: 1d_shock_tube.cpp  CMakeLists.txt  KH_instability.cpp  Manager.h  SPHParticle_radovan.hpp
KH_instability/shock_1d_tube_kokkos/: Manager_implementation.cpp
Test_cases/: CMakeLists.txt  ChainingMesh.hpp  KH_instability.cpp  Makefile  Manager.h  SPHParticle_radovan.hpp  cmake_install.cmake
Test_cases/shock_1d_tube_kokkos/: plot.py
balsara/: ChainingMesh.hpp  KH_instability.cpp  KH_instability_old.cpp  SPHManager.hpp  kernels.hpp  std_array_overloads.hpp
benchmarks/: 1d_shock_tube.cpp  CMakeLists.txt  KH_instability.cpp  README.md  out.txt  shock_tube_1d.cpp
benchmarks/shock_1d_tube_kokkos/: CMakeLists.txt  plot.py  shock_tube_1d.cpp
extended_nn/: CMakeLists.txt  ChainingMesh.hpp  KH_instability.cpp  SPHManager.h  kernels.hpp  secant.hpp
extended_nn_gradh/: ChainingMesh.hpp  KH_instability.cpp  SPHManager.h  secant.hpp  std_array_overloads.hpp
extended_nn_template/: ChainingMesh.hpp  KH_instability.cpp  SPHManager.h  regula_falsi.hpp  solve.hpp
internal_energy_formulation/: ChainingMesh.hpp  KH_instability.cpp  SPHManager.hpp  SPHManager.hpp.bak  solve.hpp  std_array_overloads.hpp
nn/: test  test.cpp
nn_tests/: CMakeLists.txt  ChainingMesh.hpp  runtime_test.cpp  std_array_overloads.hpp  test.cpp  visualize.py
nn_tests/data_1d/: particle.csv  pos.csv  rad.csv
nn_tests/data_2d/: pos.csv  rad.csv
nn_v2/: ChainingMesh.hpp  test  test.cpp  visualize.py
nn_v2/data_1d/: neighbors.csv  particle.csv  pos.csv  rad.csv
nn_v2/data_2d/: neighbors.csv  particle.csv  pos.csv
nn_v3/: CMakeLists.txt  ChainingMesh.hpp  nn.hpp  particle.hpp  runtime_test.cpp  scaling.sh  test  test.cpp  visualize.py
nn_v3/data_1d/: neighbors.csv  particle.csv  pos.csv
nn_v3/data_2d/: neighbors.csv  particle.csv  pos.csv  rad.csv
nn_v4/: CMakeLists.txt  ChainingMesh.hpp  parser.py  test.cpp
nn_v4/data_1d/: neighbors.csv
nn_v4/data_2d/: neighbors.csv  particle.csv
non_euclidian_fix/: KH_instability.cpp  SPHManager.h  SPHManager.h.bak  kernels.hpp  regula_falsi.hpp  std_array_overloads.hpp
post_revision/internal_energy_formulation/: regula_falsi.hpp  std_array_overloads.hpp
post_revision/sod_v2/: CMakeLists.txt
pre_revision/Test_cases/: 1d_shock_tube.cpp  CMakeLists.txt  Manager.h
pre_revision/test/KH/: Manager.h
pre_revision/test/sod/: ChainingMesh.hpp  SPHParticle_radovan_copy.hpp
reflective_bd/: CMakeLists.txt  ChainingMesh.hpp  ChainingMesh_defunct.hpp  KH_instability.cpp  SPHManager.hpp  kernels.hpp  regula_falsi.hpp  std_array_overloads.hpp
shock_1d_tube/: Manager.h  Manager_implementation.cpp  SPHParticle_radovan.hpp
shock_1d_tube_kokkos/: CMakeLists.txt  Manager.h  Manager_implementation_test.cpp  SPHParticle_radovan.hpp
sod_v2/: 1d_shock_tube.cpp  plot.py
sph_ippl/: CMakeLists.txt  ChainingMesh.hpp  HelloIPPL.cpp  SPHManager.hpp  SPHParticle.hpp
sph_ippl_sticky_grid/: Manager.h  Manager_implementation.cpp  SPHParticle_radovan.hpp
sph_ippl_sticky_tube/: Manager.h  Manager_implementation.cpp  Manager_implementation_1d.cpp  SPHParticle_radovan.hpp
sph_loc_1d/src/: driver.cpp  driver.hpp  kernel.hpp  particle.cpp  particle.hpp
sph_no_ippl/: CMakeLists.txt  ChainingMesh.hpp  KH_instability.cpp  SPHManager.h
sph_src/: SPHManager.hpp  SPHParticle.hpp
src/: ChainingMesh.hpp  SPHManager.h  SPHParticle.hpp  utils.hpp
test/KH/: CMakeLists.txt  KH_instability.cpp  Manager.h  SPHParticle_radovan.hpp
test/sod/: 1d_shock_tube.cpp  CMakeLists.txt  Manager.h  Manager_copy.h  SPHParticle_radovan.hpp
vanilla_sph_1d/: main.cpp  sph  sph_grid.cpp  sph_vanilla.cpp
we_cri2/: ChainingMesh.hpp  KH_instability.cpp  Manager (copy).h  Manager.h  Manager_implementation_test.cpp  SPHParticle_radovan.hpp
working_cleanup/: CMakeLists.txt  ChainingMesh.hpp  KH_instability.cpp  SPHManager.hpp  kernels.hpp  regula_falsi.hpp
